name:                amqp-topic-conduit-source
version:             0.1.0.0
synopsis:            Represents AMQP topic as an infinite Conduit Source of messages.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            Network
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src

  exposed-modules:     Network.AMQP.Topic.Source

  default-language:    Haskell2010

  build-depends:       base
                     , amqp
                     , conduit
                     , monad-logger
                     , resourcet
                     , template-haskell
                     , text
                     , transformers

  ghc-options:       -Wall


executable amqp-topic-conduit-source-example
  hs-source-dirs:      example

  main-is:             Main.hs

  default-language:    Haskell2010

  build-depends:       base
                     , amqp
                     , amqp-topic-conduit-source
                     , conduit
                     , monad-logger
                     , mtl
                     , resourcet
                     , text

  ghc-options:       -Wall
